# ViennaTalksBout

./: .env.example  .gitignore  CLAUDE.md  README.md  captured_posts.txt  pyproject.toml  requirements.txt
implPlans/: mastodon-datasource.md
research/: austrian-news-rss.md  bluesky-data-delivery.md  bluesky-geolocation.md  data-sources.md  datasource-candidates-2026-03.md  datasource-implementation-analysis.md  google-trends-research.md  local-forums-research.md  mastodon-research.md  new-datasources-research.md  reddit-research.md
scripts/: register_app.py
specs/: product-idea.md
talkbout/: __init__.py  __main__.py  config.py  datasource.py  health.py  ingest.py  store.py
talkbout/mastodon/: __init__.py  auth.py  stream.py
tests/: test_bluesky_datasource.py  test_buffer.py  test_cli_extractor.py  test_config.py  test_extractor.py  test_health.py  test_ingest.py  test_lemmy_datasource.py  test_mastodon_auth.py  test_mastodon_auth_integration.py  test_mastodon_polling.py  test_mastodon_stream.py  test_mastodon_stream_e2e.py  test_news_config.py  test_news_rss.py  test_persistence.py  test_reddit_config.py  test_reddit_datasource.py  test_reddit_integration.py  test_store.py  test_threads_datasource.py  test_web.py  test_wien_gv_datasource.py
viennatalksbout/: __init__.py  __main__.py  buffer.py  config.py  datasource.py  extractor.py  health.py  ingest.py  persistence.py  store.py  web.py
viennatalksbout/bluesky/: datasource.py
viennatalksbout/lemmy/: __init__.py  datasource.py
viennatalksbout/mastodon/: __init__.py  auth.py  polling.py  stream.py
viennatalksbout/news/: __init__.py  rss.py
viennatalksbout/reddit/: __init__.py  datasource.py
viennatalksbout/static/: index.html
viennatalksbout/threads/: __init__.py  datasource.py
viennatalksbout/wien_gv/: __init__.py  datasource.py
